--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-/* ヘッダーCSS */
+@charset "utf-8";
+
+body {
+    font-family: "DohgoMincho", serif;
+}
 
 li {
     list-style: none;
-    /* padding: 10px; */
+    /* padding: 10px;  */
     margin-left: 10vw;
     margin-right: 10vw;
     text-align: center;
     /* リンクを中央寄せにする */
 }
-
 
 a {
     color: black;
@@ -19,18 +22,9 @@ a {
     font-size: large;
 }
 
-@media screen and (max-width: 640px) {
-    a {
-        font-size: 15px;
-    }
-}
-
-
-
 .inner a:hover {
     color: blue;
     /* ホバー時の色を青に変更 */
-
 }
 
 ul {
@@ -38,7 +32,6 @@ ul {
     justify-content: center;
     padding-inline-start: 0px;
 }
-
 
 header {
     position: fixed;
@@ -51,140 +44,389 @@ header {
     box-sizing: border-box;
 }
 
+/* line用CSS */
 
-
-
-
-/*   body CSS*/
-
-body {
-    font-family: "DohgoMincho", serif;
-
-}
-
-h2 {
-    text-align: center;
-    margin-top: 160px;
-}
-
-
-/* 検索フォーム用CSS */
-
-.search-box {
-    position: relative;
-    text-align: center;
-    display: flex;
-    width: 40%;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    margin: 0 auto;
-    /* 左右の余白を自動的に設定して中央揃えにする */
-}
-
-
-
-.search-box input[type="text"] {
-    flex-grow: 1;
-    padding: 0.7rem 0 0.7rem 0.8rem;
-    border: 1px solid #cfcfcf;
-    border-radius: 1.5rem;
+#line_add_friends {
     background-color: #cfcfcf;
-}
-
-
-.search-box input:focus {
-    outline: 0;
-    box-shadow: 0 0 10px #e1e1e1, 0 0 15px #e1e1e1, 0 0 20px #e1e1e1;
-}
-
-
-
-
-.baby {
-    width: 60%;
-    height: 60%;
-    margin: 0 auto;
-    position: relative;
     text-align: center;
+    /* 要素を中央揃えにする */
+}
+
+.linecontainer {
     display: flex;
-    /* flexbox を使用して要素を中央揃えにする */
+    /* 要素を横並びに配置 */
     justify-content: center;
-    /* 水平方向に中央揃えにする */
+    /* 横方向に中央揃えにする */
     align-items: center;
     /* 垂直方向に中央揃えにする */
-    margin-bottom: 60px;
+    flex-wrap: wrap;
+    /* 内部の要素を折り返す */
+    margin-top: 20px;
 }
 
+.linecontainer h2 {
+    margin-right: 10px;
+    /* h2要素とリンクの間隔を調整 */
+}
 
-/* テーブル用CSS レスポンス対応済み〜〜 */
-table {
-    border-collapse: collapse;
+.linecontainer img {
     width: 80%;
-    margin: 0 auto;
-    /* 左右の余白を自動的に設定して中央揃えにする */
-    position: relative;
-    text-align: center;
+    height: 80%;
+    margin-right: 10px;
 }
 
-td a {
+.top {
+    margin-top: 15vw;
+    display: flex;
+    justify-content: center;
+    /* 横方向の中央揃え */
+    align-items: center;
+    /* 縦方向の中央揃え */
+    text-align: center;
+    /* h1要素を中央揃えにする */
+}
+
+h1 {
     color: black;
-    text-decoration: none;
+    font-size: 5vw;
 }
 
-td a:hover {
-    color: blue;
-    /* ホバー時の色を青に変更 */
-
+.baby-img {
+    display: flex;
 }
 
+.top img {
+    width: 15vw;
+    height: 10vw;
+    margin: 0 10px;
+    /* 左右の余白を追加 */
+}
 
-.tb01 th,
-.tb01 td {
-    padding: 10px;
-    border: solid 1px #ccc;
+.baby-img1 img {
+    transform: scale(-1, 1);
+}
+
+.hero-img {
     text-align: center;
-    box-sizing: border-box;
-
-    border-right: none !important;
-    border-left: none !important;
+    /* 親要素を中央揃えにする */
 }
 
-.tb01 th {
-    background: #cfcfcf;
+.hero-img img {
+    width: 70vw;
+    height: 50vw;
+    margin: 0 auto;
+    /* 水平方向中央寄せ */
+    animation: zoomIn 2s cubic-bezier(0.25, 1, 0.5, 1) forwards;
 }
 
-@media screen and (max-width: 640px) {
-    .tb01 .head {
-        display: none;
+@keyframes zoomIn {
+    0% {
+        transform: scale(0.1);
+        opacity: 0;
     }
 
-    .tb01 {
-        width: 80%;
-        /* テーブルの幅を100%に設定 */
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.babies {
+    /*    text-align: center; */
+    display: flex;
+}
+
+.babyby1 img {
+    transform: scale(-1, 1);
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.babyby2 img {
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 auto;
+    display: flex;
+}
+
+@media screen and (max-width: 959px) {
+
+    /* 959px以下に適用されるCSS（タブレット用） */
+    body {
+        font-family: "DohgoMincho", serif;
     }
 
-    .tb01 th,
-    .tb01 td {
-        display: block;
+    li {
+        list-style: none;
+        /* padding: 10px;  */
+        margin-left: 10vw;
+        margin-right: 10vw;
+        text-align: center;
+        /* リンクを中央寄せにする */
+    }
+
+    a {
+        color: black;
+        text-decoration: none;
+        font-weight: lighter;
+        display: inline-block;
+        /* リンクのテキストを中央揃えにする */
+        font-size: 25px;
+    }
+
+    ul {
+        display: flex;
+        justify-content: center;
+        padding-inline-start: 0px;
+    }
+
+    header {
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        left: 0;
         width: 100%;
-        border-bottom: solid 1px #ccc;
-        /* 下部の境界線を追加 */
-        border-right: none !important;
-        border-left: none !important;
-        padding: 5px;
-        /* パディングを少し減らす */
-    }
-
-    .tb01 th:first-child,
-    .tb01 td:first-child {
+        /*   padding: 20px 40px;  */
         background: #cfcfcf;
-        color: #fff;
-        font-weight: bold;
+        box-sizing: border-box;
     }
 
-    .tb01 tr:last-child {
-        border-bottom: none;
-        /* 最後の行の下部境界線を削除 */
+    .top {
+        margin-top: 20vw;
+        display: flex;
+        justify-content: center;
+        /* 横方向の中央揃え */
+        align-items: center;
+        /* 縦方向の中央揃え */
+        text-align: center;
+        /* h1要素を中央揃えにする */
+        margin-top: 30vw;
+    }
+
+    #line_add_friends {
+        background-color: #cfcfcf;
+        text-align: center;
+        /* 要素を中央揃えにする */
+    }
+
+    .linecontainer {
+        display: flex;
+        /* 要素を横並びに配置 */
+        justify-content: center;
+        /* 横方向に中央揃えにする */
+        align-items: center;
+        /* 垂直方向に中央揃えにする */
+        flex-wrap: wrap;
+        /* 内部の要素を折り返す */
+        margin-top: 20px;
+        width: 100%;
+        height: 10vw;
+        background-color: #cfcfcf;
+    }
+
+    .linecontainer h2 {
+        margin-right: auto;
+        /* h2要素を右端に寄せる */
+        margin-left: auto;
+        /* h2要素を左端に寄せる */
+    }
+
+    .linecontainer img {
+        width: 50%;
+        height: 50%;
+        margin-right: auto;
+        /* 画像を右端に寄せる */
+        margin-left: auto;
+        /* 画像を左端に寄せる */
+    }
+
+    h1 {
+        margin: 20vw 0;
+        /* 左右の余白を追加 */
+        color: black;
+        font-size: 60px;
+    }
+
+    .baby-img {
+        display: flex;
+    }
+
+    .top img {
+        width: 25vw;
+        height: 20vw;
+        margin: 0;
+        /* 左右の余白を追加 */
+    }
+
+    .baby-img1 img {
+        transform: scale(-1, 1);
+    }
+
+    .hero-img {
+        text-align: center;
+        /* 親要素を中央揃えにする */
+    }
+
+    .hero-img img {
+        width: 80vw;
+        height: 60vw;
+        margin: 0 auto;
+        /* 水平方向中央寄せ */
+        animation: zoomIn 2s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+    }
+
+    @keyframes zoomIn {
+        0% {
+            transform: scale(0.1);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+            transform: scale(1);
+        }
     }
 }
 
+@media screen and (max-width: 480px) {
+
+    /* 480px以下に適用されるCSS（スマホ用） */
+    body {
+        font-family: "DohgoMincho", serif;
+    }
+
+    li {
+        list-style: none;
+        /* padding: 10px;  */
+        margin-left: 10vw;
+        margin-right: 10vw;
+        text-align: center;
+        /* リンクを中央寄せにする */
+    }
+
+    a {
+        color: black;
+        text-decoration: none;
+        font-weight: lighter;
+        display: inline-block;
+        /* リンクのテキストを中央揃えにする */
+        font-size: 15px;
+    }
+
+    ul {
+        display: flex;
+        justify-content: center;
+        padding-inline-start: 0px;
+    }
+
+    header {
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        /*   padding: 20px 40px;  */
+        background: #cfcfcf;
+        box-sizing: border-box;
+    }
+
+    .top {
+        margin-top: 25vw;
+        display: flex;
+        justify-content: center;
+        /* 横方向の中央揃え */
+        align-items: center;
+        /* 縦方向の中央揃え */
+        text-align: center;
+        /* h1要素を中央揃えにする */
+    }
+
+    p {
+        font-size: 10px;
+    }
+
+    h1 {
+        /*   margin-top: 100vw; /* 左右の余白を追加 */
+        color: black;
+        font-size: 30px;
+    }
+
+    .baby-img {
+        display: flex;
+    }
+
+    /* line用CSS */
+
+    #line_add_friends {
+        background-color: #cfcfcf;
+        text-align: center;
+        /* 要素を中央揃えにする */
+    }
+
+    .linecontainer {
+        display: flex;
+        /* 要素を横並びに配置 */
+        justify-content: center;
+        /* 横方向に中央揃えにする */
+        align-items: center;
+        /* 垂直方向に中央揃えにする */
+        flex-wrap: wrap;
+        /* 内部の要素を折り返す */
+        margin-top: 10px;
+        width: 100%;
+        height: 10vw;
+    }
+
+    .linecontainer h2 {
+
+        font-size: 3vw;
+        margin-right: auto;
+        /* h2要素を右端に寄せる */
+        margin-left: auto;
+        /* h2要素を左端に寄せる */
+    }
+
+    .linecontainer img {
+        width: 30%;
+        height: 30%;
+        margin-right: auto;
+        /* 画像を右端に寄せる */
+        margin-left: auto;
+        /* 画像を左端に寄せる */
+    }
+
+    .top img {
+        width: 25vw;
+        height: 20vw;
+    }
+
+    .baby-img1 img {
+        transform: scale(-1, 1);
+    }
+
+    .hero-img {
+        text-align: center;
+        /* 親要素を中央揃えにする */
+    }
+
+    .hero-img img {
+        width: 70vw;
+        height: 50vw;
+        margin: 0 auto;
+        /* 水平方向中央寄せ */
+        animation: zoomIn 2s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+    }
+
+    @keyframes zoomIn {
+        0% {
+            transform: scale(0.1);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+}
